--- a/index.html
+++ b/index.html
@@ -5,52 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!--custom CSS file-->
+    <!-- My custom styles -->
     <link rel="stylesheet" href="styles.css">
 
     <title>My Calculator</title>
 </head>
-<body>
-    <div class="row">
-        <div class="col-8 col-lg-4 offset-2 offset-lg-4 col-md-6 offset-md-3 myCalc">
-            <div class="container">
-                <div class="displayScreen d-flex align-items-center justify-content-end mb-5"><h1 class="display"></h1><span></span></div>
+<body class="container-fluid">
 
-                <div class="row">
-                    <div class="col-3 keyboard mx-auto mb-3 my-auto rounded-3"><h2>1</h2></div>
-                    <div class="col-3 keyboard mx-auto mb-3 my-auto rounded-3"><h2>2</h2></div>
-                    <div class="col-3 keyboard mx-auto mb-3 my-auto rounded-3"><h2>3</h2></div>
-                    <div class="col-3 keyboard mx-auto mb-3 my-auto  rounded-3 sign"><h2>+</h2></div>
-                </div>
-
-                <div class="row">
-                    <div class="col-3 keyboard mx-auto my-auto  mb-3 rounded-3"><h2>4</h2></div>
-                    <div class="col-3 keyboard mx-auto my-auto mb-3 rounded-3"><h2>5</h2></div>
-                    <div class="col-3 keyboard mx-auto my-auto mb-3 rounded-3"><h2>6</h2></div>
-                    <div class="col-3 keyboard mx-auto my-auto rounded-3 mb-3 sign"><h2>-</h2></div>
-                </div>
-
-                <div class="row">
-                    <div class="col-3 keyboard mx-auto mb-3 my-auto rounded-3"><h2>7</h2></div>
-                    <div class="col-3 keyboard mx-auto mb-3 my-auto rounded-3"><h2>8</h2></div>
-                    <div class="col-3 keyboard mx-auto mb-3 my-auto rounded-3"><h2>9</h2></div>
-                    <div class="col-3 keyboard mx-auto mb-3 my-auto  rounded-3 sign"><h2>x</h2></div>
-                </div>
-
-                <div class="row">
-                    <div class="col-3 keyboard mx-auto my-auto  mb-3 delete rounded-3"><h2>c</h2></div>
-                    <div class="col-3 keyboard mx-auto my-auto mb-3 rounded-3"><h2>0</h2></div>
-                    <div class="col-3 keyboard mx-auto my-auto mb-3 rounded-3 equalSign"><h2>=</h2></div>
-                    <div class="col-3 keyboard mx-auto my-auto rounded-3 mb-3 sign"><h2>/</h2></div>
-                </div>
-            </div>
+    <div id="calc" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-10 offset-1">
+        <div class="screen text-end px-1"><h3></h3></div>
+        <div>
+            <table class="keyboard table table-bordered">
+                <tbody>
+                    <tr>
+                        <td class="text-center button">(</td>
+                        <td class="text-center button">)</td>
+                        <td class="text-center ">DEL</td>
+                        <td class="text-center button">/</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center button">7</td>
+                        <td class="text-center button">8</td>
+                        <td class="text-center button">9</td>
+                        <td class="text-center button">*</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center button">4</td>
+                        <td class="text-center button">5</td>
+                        <td class="text-center button">6</td>
+                        <td class="text-center button">-</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center button">1</td>
+                        <td class="text-center button">2</td>
+                        <td class="text-center button">3</td>
+                        <td class="text-center button">+</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center clearBtn">C</td>
+                        <td class="text-center button">0</td>
+                        <td class="text-center button">.</td>
+                        <td class="text-center equalSign">=</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 
-
+    <!-- My custom JavaScript code -->
     <script src="app.js"></script>
+
+    <!-- Bootstrap 5 JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
