add delete buttton features

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body class="container-fluid">
 
     <div id="calc" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-10 offset-1">
-        <div class="screen text-end px-1"><h3></h3></div>
-        <div>
+        <div class="screen text-end px-1"><p></p></div>
+        <div class="table-responsive">
             <table class="keyboard table table-bordered">
                 <tbody>
                     <tr>
                         <td class="text-center button">(</td>
                         <td class="text-center button">)</td>
-                        <td class="text-center ">DEL</td>
+                        <td class="text-center delete">DEL</td>
                         <td class="text-center button">/</td>
                     </tr>
                     <tr>
@@ -39,16 +39,16 @@
                         <td class="text-center button">-</td>
                     </tr>
                     <tr>
-                        <td class="text-center button">1</td>
+                        <td class="text-center button rounded-circle">1</td>
                         <td class="text-center button">2</td>
                         <td class="text-center button">3</td>
                         <td class="text-center button">+</td>
                     </tr>
                     <tr>
-                        <td class="text-center clearBtn">C</td>
+                        <td class="text-center clear">C</td>
                         <td class="text-center button">0</td>
                         <td class="text-center button">.</td>
-                        <td class="text-center equalSign">=</td>
+                        <td class="text-center equal">=</td>
                     </tr>
                 </tbody>
             </table>
