reorder the buttons, set the background-colors, set the border colors

--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
 </head>
 <body class="container-fluid">
 
-    <div id="calc" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-10 offset-1">
+    <div id="calc" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-8 offset-2">
         <div class="screen text-end px-1"><p></p></div>
         <div class="table-responsive">
             <table class="keyboard table table-bordered">
                 <tbody>
                     <tr>
+                        <td class="text-center clear bg-info">C</td>
                         <td class="text-center button">(</td>
                         <td class="text-center button">)</td>
-                        <td class="text-center delete">DEL</td>
                         <td class="text-center button">/</td>
                     </tr>
                     <tr>
-                        <td class="text-center button">7</td>
-                        <td class="text-center button">8</td>
-                        <td class="text-center button">9</td>
-                        <td class="text-center button">*</td>
-                    </tr>
-                    <tr>
-                        <td class="text-center button">4</td>
-                        <td class="text-center button">5</td>
-                        <td class="text-center button">6</td>
+                        <td class="text-center button bg-secondary">7</td>
+                        <td class="text-center button bg-secondary">8</td>
+                        <td class="text-center button bg-secondary">9</td>
                         <td class="text-center button">-</td>
                     </tr>
                     <tr>
-                        <td class="text-center button rounded-circle">1</td>
-                        <td class="text-center button">2</td>
-                        <td class="text-center button">3</td>
+                        <td class="text-center button bg-secondary">4</td>
+                        <td class="text-center button bg-secondary">5</td>
+                        <td class="text-center button bg-secondary">6</td>
                         <td class="text-center button">+</td>
                     </tr>
                     <tr>
-                        <td class="text-center clear">C</td>
-                        <td class="text-center button">0</td>
-                        <td class="text-center button">.</td>
-                        <td class="text-center equal">=</td>
+                        <td class="text-center button bg-secondary">1</td>
+                        <td class="text-center button bg-secondary">2</td>
+                        <td class="text-center button bg-secondary">3</td>
+                        <td class="text-center button">*</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center button bg-secondary">.</td>
+                        <td class="text-center button bg-secondary">0</td>
+                        <td class="text-center delete bg-secondary">DEL</td>
+                        <td class="text-center equal bg-warning">=</td>
                     </tr>
                 </tbody>
             </table>
