Some logic and ui changes
I refactored the function calculate. I added a handler for irregular js operators. I added a box shadow effect. some error handlers still needed.

--- a/index.html
+++ b/index.html
@@ -11,44 +11,49 @@
     <!-- My custom styles -->
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Minimal Bootstrap styles in case of no connection-->
+    <link rel="stylesheet" href="bootstrap.min.css">
+
     <title>My Calculator</title>
 </head>
 <body class="container-fluid">
 
-    <div id="calc" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-8 offset-2">
-        <div class="screen text-end px-1"><p></p></div>
+    <div id="calc" class=" neumorphism col-lg-4 offset-lg-4 col-md-6 offset-md-3 col-8 offset-2">
+        <div class="container">
+            <div class="container-fluid screen text-end neumorphism border-0"><p></p></div>
+        </div>
         <div class="table-responsive">
-            <table class="keyboard table table-bordered">
+            <table class="table table-borderless" id="keyboard">
                 <tbody>
                     <tr>
-                        <td class="text-center clear bg-info">C</td>
+                        <td class="text-center clear">C</td>
                         <td class="text-center button">(</td>
                         <td class="text-center button">)</td>
-                        <td class="text-center button">/</td>
+                        <td class="text-center button">&divide;</td> <!-- &#247;-->
                     </tr>
                     <tr>
-                        <td class="text-center button bg-secondary">7</td>
-                        <td class="text-center button bg-secondary">8</td>
-                        <td class="text-center button bg-secondary">9</td>
-                        <td class="text-center button">-</td>
+                        <td class="text-center button">7</td>
+                        <td class="text-center button">8</td>
+                        <td class="text-center button">9</td>
+                        <td class="text-center button">&minus;</td> <!--&plusmn;-->
                     </tr>
                     <tr>
-                        <td class="text-center button bg-secondary">4</td>
-                        <td class="text-center button bg-secondary">5</td>
-                        <td class="text-center button bg-secondary">6</td>
+                        <td class="text-center button ">4</td>
+                        <td class="text-center button ">5</td>
+                        <td class="text-center button ">6</td>
                         <td class="text-center button">+</td>
                     </tr>
                     <tr>
-                        <td class="text-center button bg-secondary">1</td>
-                        <td class="text-center button bg-secondary">2</td>
-                        <td class="text-center button bg-secondary">3</td>
-                        <td class="text-center button">*</td>
+                        <td class="text-center button">1</td>
+                        <td class="text-center button">2</td>
+                        <td class="text-center button">3</td>
+                        <td class="text-center button">&times;</td> <!--&#215;-->
                     </tr>
                     <tr>
-                        <td class="text-center button bg-secondary">.</td>
-                        <td class="text-center button bg-secondary">0</td>
-                        <td class="text-center delete bg-secondary">DEL</td>
-                        <td class="text-center equal bg-warning">=</td>
+                        <td class="text-center button">.</td>
+                        <td class="text-center button">0</td>
+                        <td class="text-center delete">DEL</td>
+                        <td class="text-center equal">=</td>
                     </tr>
                 </tbody>
             </table>
